--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <!-- endbuild -->
     <script type="text/javascript">
       console.log(window.location);
-      window.location.replace('http://maps.wakegov.com/water-analysis/' + window.location.search);
+      window.location.replace('http://maps.wakegov.com/water-analysis/#/' + window.location.search);
     </script>    
   </head>
   <body ng-app="waterAnalysisApp">
